Fix bottom spacing

--- a/main.css
+++ b/main.css
@@ -47,6 +47,8 @@ body {
         margin-left: 30%;
 	margin-right: 30%;
         width: 40%;
+	margin-bottom: 12%;
+	height: 88%;
         text-align: center;
 }
 
